updated the authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
 
 - Chisom Chieke <https://github.com/Sommy20>
+
+- Obembe Daniel <https://github.com/sirobembs>
 -  <>
